add stuff create users and add them random orders with skus from one category, smth fixed in Simple cat repo

--- a/AddStuff/config/service/AddStuff.properties
+++ b/AddStuff/config/service/AddStuff.properties
@@ -1,6 +1,23 @@
 $class=service.AddStuff
 $scope=global
-mProfileTools=/atg/userprofiling/ProfileTools
-mOrderManager=/atg/commerce/order/OrderManager
-mCatalogTools=/atg/commerce/catalog/CatalogTools
+profileTools=/atg/userprofiling/ProfileTools
+orderManager=/atg/commerce/order/OrderManager
+catalogTools=/atg/commerce/catalog/CatalogTools
+commerceItemManager=/atg/commerce/order/CommerceItemManager
+transactionManager=/atg/dynamo/transaction/TransactionManager
 
+userLogin=user
+defaultPassword=12345
+userLoginSuffix=@test-forte.net
+usersOffset=0
+usersCount=10
+
+#min num orders
+ordersOffset=1
+#max num orders
+ordersCount=5
+
+categoryId=homeStoreStorage
+
+maxQuantity=5
+minQuantity=1
