fix map convert value

--- a/AddStuff/config/service/ExportToCSV.properties
+++ b/AddStuff/config/service/ExportToCSV.properties
@@ -1,16 +1,16 @@
 $class=service.ExportToCSV
 $scope=global
 
-repository=/custom/Cat
+repository=/test/Test
 #/atg/userprofiling/ProfileAdapterRepository
-itemDescriptorName=cat
+itemDescriptorName=test
 # which of properties to export
-columnNames=catId,catName,breed,pedigreeNumber,vaccinations,showList
+columnNames=userId,userName,urls,mapUrls
 
 filePath=/apps/dataload/csv/
 
-delimeterCollection=|
+delimeterCollection=:
 emptyMapOrCollection=[]
 
 # number of records in one csv file
-pageSize=10
+pageSize=100
