--- a/AddStuff/config/service/OrderExportToCSV.properties
+++ b/AddStuff/config/service/OrderExportToCSV.properties
@@ -11,8 +11,8 @@ columnNames=id,\
 
 filePath=/apps/dataload/csv/
 
-delimeterCollection=|
+delimeterCollection=:
 emptyMapOrCollection=[]
 
 # number of records in one csv file
-pageSize=10
+pageSize=100
