--- a/AddStuff/config/service/ProductExportToCSV.properties
+++ b/AddStuff/config/service/ProductExportToCSV.properties
@@ -10,7 +10,7 @@ columnNames=id,\
 
 filePath=/apps/dataload/csv/
 
-delimeterCollection=|
+delimeterCollection=:
 emptyMapOrCollection=[]
 
 # number of records in one csv file
