--- a/AddStuff/config/service/UserExportToCSV.properties
+++ b/AddStuff/config/service/UserExportToCSV.properties
@@ -12,8 +12,8 @@ columnNames=id,\
 
 filePath=/apps/dataload/csv/
 
-delimeterCollection=|
+delimeterCollection=:
 emptyMapOrCollection=[]
 
 # number of records in one csv file
-pageSize=10
+pageSize=100
