developing import from csv

--- a/AddStuff/config/service/ExportToCSV.properties
+++ b/AddStuff/config/service/ExportToCSV.properties
@@ -2,16 +2,19 @@
 $class=service.ExportToCSV
 $scope=global
 
-repository=/test/Test
+repository=/custom/Cat
+#/test/Test
 #/atg/userprofiling/ProfileAdapterRepository
-itemDescriptorName=test
+itemDescriptorName=cat
+#test
 # which of properties to export
-columnNames=userId,userName,urls,mapUrls
+columnNames=catId,catName,breed,pedigreeNumber,vaccinations,showList
+#userId,userName,urls,mapUrls
 
 filePath=/apps/dataload/csv/
 
-delimeterCollection=:
-emptyMapOrCollection=[]
+delimiterCollectionOrMap=:
+emptyCollectionOrMap=[]
 
 # number of records in one csv file
 pageSize=100
