--- a/AddStuff/config/service/ImportFromCSV.properties
+++ b/AddStuff/config/service/ImportFromCSV.properties
@@ -2,13 +2,25 @@
 $class=service.ImportFromCSV
 $scope=global
 
-repository=/test/Test
-itemDescriptorName=test
+repository=/custom/Cat
+#/atg/commerce/catalog/ProductCatalog
+#/custom/Cat
+itemDescriptorName=cat
+#cat
+requiredProperties=catId
+repositoryMappingTools=/tools/RepositoryMappingTools
+#catId,catName,vaccinations
 
-filePath=/apps/dataload/csv/test1-4.csv
+#mapping=\
+#	=/atg/wrapper/String
+#	col=/atg/wrapper/CatWrapper
+	
 
-delimeterCollection=:
-emptyMapOrCollection=[]
+filePath=/apps/dataload/csv/cat1-5.csv
 
+delimiterCollectionOrMap=:
+emptyCollectionOrMap=[]
+startCollectionOrMap=[
+endCollectionOrMap=]
 # number of records in one csv file
-pageSize=2
+pageSize=1
