--- a/AddStuff/config/service/OrderExportToCSV.properties
+++ b/AddStuff/config/service/OrderExportToCSV.properties
@@ -12,8 +12,8 @@ columnNames=id,\
 
 filePath=/apps/dataload/csv/
 
-delimeterCollection=:
-emptyMapOrCollection=[]
+delimiterCollectionOrMap=:
+emptyCollectionOrMap=[]
 
 # number of records in one csv file
 pageSize=100
