--- a/AddStuff/config/service/ProductExportToCSV.properties
+++ b/AddStuff/config/service/ProductExportToCSV.properties
@@ -7,12 +7,13 @@ itemDescriptorName=product
 # which of properties to export
 columnNames=id,\
 			childSKUs,\
-			parentCategories
+			parentCategories,\
+			displayName
 
 filePath=/apps/dataload/csv/
 
-delimeterCollection=:
-emptyMapOrCollection=[]
+delimiterCollectionOrMap=:
+emptyCollectionOrMap=[]
 
 # number of records in one csv file
 pageSize=100
