--- a/AddStuff/config/service/UserExportToCSV.properties
+++ b/AddStuff/config/service/UserExportToCSV.properties
@@ -13,8 +13,8 @@ columnNames=id,\
 
 filePath=/apps/dataload/csv/
 
-delimeterCollection=:
-emptyMapOrCollection=[]
+delimiterCollectionOrMap=:
+emptyCollectionOrMap=[]
 
 # number of records in one csv file
 pageSize=100
